# modern-webassembly

./: Cargo.toml  README.md  crates.js  fornjot-v1.wit  index.html  model-v1.wit  search-index.js  settings.html  source-files.js
addr2line/: all.html  fn.demangle.html  fn.demangle_auto.html  index.html  struct.Context.html  struct.Frame.html  struct.FrameIter.html  struct.FunctionName.html  struct.Location.html  struct.LocationRangeIter.html
adler/: all.html  fn.adler32_slice.html  index.html  struct.Adler32.html
ahash/: all.html  index.html  struct.AHasher.html  struct.RandomState.html  trait.CallHasher.html
ansi_term/: all.html  enum.Color.html  enum.Colour.html  fn.ANSIByteStrings.html  fn.ANSIStrings.html  fn.sub_string.html  fn.unstyle.html  fn.unstyled_len.html  index.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  (+8 more)
cuboid-model/: Cargo.toml  wapm.toml
guest/: Cargo.toml  all.html  index.html
guest/src/: lib.rs
host/: Cargo.toml  all.html  enum.Command.html  fn.list_models.html  fn.load_models.html  fn.main.html  fn.main_.html  fn.run.html  index.html  sidebar-items.js  struct.Args.html  struct.Argument.html  struct.Fornjot.html  struct.HostFunctions.html  struct.Model.html  type.Arguments.html
host/fornjot_v1/: enum.LogLevel.html  fn.add_to_imports.html  index.html  sidebar-items.js  struct.FornjotV1Tables.html  trait.FornjotV1.html
host/model_v1/: index.html  sidebar-items.js  struct.Error.html  struct.Metadata.html  struct.ModelV1.html  struct.ModelV1Data.html  struct.Shape.html  struct.Vertex.html
host/src/: main.rs
(+16555 files in other folders)
