[package]
name = "guest"
version = "0.1.0"
edition = "2021"
description = "A module for generating a square prism."

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
