[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
structopt = "0.3.26"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
wasmer = "2.2.0"
wit-bindgen-wasmer = { git = "https://github.com/wasmerio/wit-bindgen" }
